cmake_minimum_required(VERSION 3.13)

project(CatHerder VERSION 0.1.0 LANGUAGES C CXX)

# if(CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME)
#     include(CTest)
# endif()

# if(CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME AND BUILD_TESTING)
#     add_subdirectory("${PROJECT_SOURCE_DIR}/src/tests")
# endif()

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIREDE True)
set(THREAD_PREFER_PTHEARD_FLAG ON)
SET(CMAKE_CXX_FLAGS -pthread)
find_package(Threads REQUIRED)

add_subdirectory(src)
